--- a/CSS/style.css
+++ b/CSS/style.css
@@ -26,7 +26,7 @@ header{
 
 /* Main */
 
-.container{
+#container{
     display: flex;
     flex-wrap: wrap;
     width: 60%;
@@ -62,7 +62,6 @@ header{
 
 .card-img{
     max-width: 100%;
-    max-height: 100%;
 }
 
 .card-title{
