--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,32 +1,32 @@
 /* Reset */
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
 /* Generics */
-body{
+body {
     background-image: url(../img/cork.png);
 }
 
 /* Header */
 
-header{
+header {
     background-image: url(../img/wall.png);
 }
 
-.header-title{
+.header-title {
     text-align: center;
     padding: 1rem;
     font-size: 5rem;
-    font-family: 'Sometype Mono', 'monospace';
+    font-family: 'Sometype Mono', monospace;
 }
 
 /* Main */
 
-#container{
+#container {
     display: flex;
     flex-wrap: wrap;
     width: 60%;
@@ -38,38 +38,68 @@ header{
 
 /* Cards */
 
-.card{
-    padding: 0 1.5rem;
+.card {
+    padding: 0 1rem;
     background-color: white;
     margin-top: 2rem;
-    flex-basis: calc((100% - 4rem) / 3);  
+    flex-basis: calc((100% - 4rem) / 3);
 }
 
-.card-pin{
+.card-pin {
     position: relative;
 }
 
-.card-pin-img{
+.card-pin-img {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    top: -15px;
+    top: -10px;
 }
 
-.card-img-container{
+.card-img-container {
     padding-top: 1rem;
 }
 
-.card-img{
+.card-img {
     max-width: 100%;
 }
 
-.card-title{
-    font-family: 'Sometype Mono', 'monospace';
-    padding-top: 1.5rem;
+.card-title {
+    font-family: 'Sometype Mono', monospace;
+    padding-top: 1rem;
 }
 
-.card-date{
-    font-family: 'Edu Tas Beginner', sans-serif;
-    padding-bottom: 1.5rem;
+.card-date {
+    font-family: 'Edu TAS Beginner', sans-serif;
+    padding-bottom: 1rem;
+}
+
+/* Responsive */
+
+/* Tablet */
+
+@media screen and (max-width:955px) {
+
+    #container{
+        width: 80%;
+    }
+
+   .card{
+    flex-basis: calc((100% - 2rem) / 2);
+   }
+
+}
+
+/* Smartphone */
+
+@media screen and (max-width:480px) {
+
+    #container{
+        width: 70%;
+    }
+
+   .card{
+    flex-basis: 100%;
+   }
+
 }
