--- a/CSS/style.css
+++ b/CSS/style.css
@@ -48,6 +48,13 @@ header {
     background-color: white;
     margin-top: 2rem;
     flex-basis: calc((100% - 4rem) / 3);
+    transition: 0.3s;
+}
+
+.card:hover {
+    cursor: pointer;
+    transform: rotate(15deg);
+    box-shadow: 20px 20px 20px rgba(0, 0, 0, 0.8);
 }
 
 .card-pin {
@@ -70,6 +77,8 @@ header {
 }
 
 .card-title {
+    font-size: 1.5rem;
+    font-weight: 900;
     font-family: 'Sometype Mono', monospace;
     padding-top: 1rem;
 }
@@ -77,6 +86,7 @@ header {
 .card-date {
     font-family: 'Edu TAS Beginner', sans-serif;
     padding-bottom: 1rem;
+    font-weight: 900;
 }
 
 /* Overlay */
@@ -105,9 +115,19 @@ header {
 }
 
 #overlay-button {
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 2rem;
     font-size: 2rem;
+    font-weight: bold;
     cursor: pointer;
+    background-image: url(../img/wall.png);
+    border: 3px solid black;
+    border-radius: 5px;
+    transition: 0.3s;
+}
+
+#overlay-button:hover {
+    transform: translateY(10px) scale(1.2);
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.25);
 }
 
 #overlay-img {
